homebridge/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
    - host: homebridge.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebridge
                port:
                  name: http
  tls:
    - hosts:
        - homebridge.lan
      secretName: homebridge-tls
